# WallerLocal

./: .gitignore  CMakeLists.txt  WallerLocal.sln  build.sh  constants.h  environment.cpp  environment.h  gp_engine.hpp  main  main.cpp  readme.md  robot.cpp  robot.h  robot_gp.hpp  waller
WallerLocal/: WallerLocal.vcxproj  readme.md
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
python_version/: README.md  constants.py  engine.py  environment.py  main.py  primitives.py  requirements.txt  robot.py  setup.py  tracking.py
python_version/robot_gp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_version/src/: __init__.py
python_version/src/gp/: __init__.py
